--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
